// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={191500}
      createdAt={0}
      description="Marijuana"
      id="1"
      key="1"
      note="cannabis like crazy"
    />
    <ExpenseListItem
      amount={1580}
      createdAt={-345600000}
      description="ecstasy"
      id="2"
      key="2"
      note="too feel good"
    />
    <ExpenseListItem
      amount={2580}
      createdAt={345600000}
      description="LSD"
      id="3"
      key="3"
      note="to spirituality journeys"
    />
  </div>
</div>
`;
